<resources>
    <string name="app_name">Lantern</string>
    <string name="action_settings">Settings</string>
    <string name="proxy_all_setting">Proxy all traffic</string>
    <string name="proxy_all_on_header">ON (Most secure option)</string>
    <string name="proxy_all_off_header">OFF (Fastest option)</string>
    <string name="proxy_all_on">With this option, all of your device traffic will be sent through %1$s</string>
    <string name="proxy_all_off">With this option off, only traffic to blocked sites will be sent through %1$s</string>
    <string name="button_text">Start</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="default_fragment">Default Fragment</string>
    <string name="receive_lantern">Receive Lantern desktop by email</string>
    <string name="lantern_desktop">Lantern Desktop</string>
    <string name="email_hint">Email</string>
    <string name="send_button">Send</string>
    <string name="send_desktop">Send Desktop</string>
    <string name="send_email">Send Email</string>
    <string name="your_email">Your Email</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="please_enter">Please enter, and confirm your email address.</string>
    <string name="please_enter_register">Please enter and confirm your email address to register your Lantern Pro Account.</string>
    <string name="your_referral_code">Your Referral Code</string>
    <string name="report_an_issue">Report an Issue</string>
    <string name="select_issue">Please select an issue</string>
    <string name="select_issue_desc">Please leave us a brief description of your issue here,\nand we will get back to you ASAP.</string>
    <string name="submit">Submit</string>
    <string name="submit_issue">Submit Issue</string>
    <string name="no_issue_selected">Please select an issue before submitting a report</string>
    <string name="cannot_find_email">Oops! We\'re having trouble finding that email address.</string>
    <string name="no_purchase_date">Please select an approximate date when you purchased Lantern Pro</string>
    <string name="purchase_date">Purchase Date</string>
    <string-array name="common_issue_list">
        <item>Cannot access blocked sites</item>
        <item>Cannot complete purchase</item>
        <item>Cannot sign in</item>
        <item>Spinner loads endlessly</item>
        <item>Slow</item>
        <item>Other</item>
    </string-array>
    <string name="submit_code">Confirm Code</string>
    <string name="on_text">ON</string>
    <string name="off_text">OFF</string>
    <string name="lantern_off">Lantern is Off. Flip the switch to access blocked sites and services!</string>
    <string name="lantern_on">Lantern is On. You can now access blocked sites and services!</string>
    <string name="on_desc">You can now access\r\nblocked sites and services</string>
    <string name="off_desc">Click the button to access blocked sites and services</string>
    <string name="service_connected">"Connected to VPN"</string>
    <string name="desktop_option">Desktop Version</string>
    <string name="contact_option">Contact</string>
    <string name="check_for_update">Check for Update</string>
    <string name="no_update_available">You\'re up to date!</string>
    <string name="error_checking_for_update">Error checking for new version of %1$s</string>
    <string name="error_making_purchase">Error trying to make purchase</string>
    <string name="have_latest_version">%1$s %2$s is the newest version available.</string>
    <string name="updating_lantern">Updating %1$s</string>
    <string name="cancel">Cancel</string>
    <string name="newsfeed_option">Try Lanten Feed</string>
    <string name="newsfeed_off_option">Turn off Feed</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_option">Share</string>
    <string name="quit_option">Quit</string>
    <string name="share_email_native"></string>
    <string name="share_email_subject">Lantern Android</string>
    <string name="fatal_error">Lantern encountered a fatal error and is no longer running</string>
    <string name="share_twitter">Check out Lantern Android: https://bit.ly/lanternapk</string>
    <string name="share_facebook">I\'m using Lantern for Android, it\'s available here: https://bit.ly/lanternapk</string>
    <string name="share_email_gmail">I\'m using Lantern for Android, and I\'ve attached the APK file!</string>
    <string name="share_sms">I\'m using Lantern for Android, download it here: https://bit.ly/lanternapk</string>
    <string name="share_chooser_text">Share Lantern Android</string>
    <string name="card">Card</string>
    <string name="credit_card">Credit Card</string>
    <string name="Alipay">Alipay</string>
    <string name="alipay_account">Alipay account</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="success_email">Lantern Desktop has been e-mailed to you!</string>
    <string name="error_email">There was a problem sending you %1$s Desktop. Please try again later.</string>
    <string name="send_logs">Send Logs</string>
    <string name="help_survey">Help make Lantern better, take this one question survey now!</string>
    <string name="take_survey">Take Survey!</string>
    <string name="thanks_survey">Thanks for taking our survey!\n</string>
    <string name="success_log_email">Logs submitted successfully to %1$s!</string>
    <string name="error_log_email">Error sending logs to %1$s. Please try again later.</string>
    <string name="invalid_email">Invalid e-mail address</string>
    <string name="error_payment_gateway">Error contacting payment gateway</string>
    <string name="emails_do_not_match">Email fields do not match</string>
    <string name="invalid_reseller_code">The reseller code you entered is invalid</string>
    <string name="invalid_referral_code">Invalid referral code</string>
    <string name="invalid_voucher_code">Invalid voucher code</string>
    <string name="cannot_use_own_referral_code">Cannot use your own referral code for promotion</string>
    <string name="no_internet_connection">No Internet connection available!</string>
    <string name="unable_remove_device">Unable to remove device. Please try again later!</string>
    <string name="remove">Remove</string>
    <string name="contact_email">team@getlantern.org</string>
    <string name="contact_message">Help Me</string>
    <string name="contact_subject">Lantern Android</string>
    <string name="update_available">A new version of %1$s is available! Would you like to upgrade now?</string>
    <string name="not_now">Not Now</string>
    <string name="install_update">Update</string>
    <string name="error_update">Error Downloading Update</string>
    <string name="error_install_update">Error Installing Update</string>
    <string name="loading">Loading..</string>
    <string name="manual_update">Try manually installing the latest version from &lt;a href="https://lantern-android.io">here1&lt;/a></string>
    <string name="pro_welcome_text">Welcome to Lantern Pro!</string>
    <string name="happy_anniversary">HAPPY LANTERN ANNIVERSARY!</string>
    <string name="welcome_greeting">Welcome to Lantern</string>
    <string name="upgrade_for">Upgrade for ultimate\n speed &amp; stability</string>
    <string name="what_kind_of_lantern">What kind of Lantern\n would you like?</string>
    <string name="lantern_pro_radio">Lantern Pro - Unlimited Data</string>
    <string name="lantern_free_radio">Lantern Basic - 500MB Data</string>
    <string name="welcome_to_lantern">Welcome to the new and improved Lantern</string>
    <string name="to_get_unlimited">To get unlimited data, ultimate speeds and even stronger blocking resistance\nUPGRADE to Pro!</string>
    <string name="renew_pro_account">Renew Pro Account</string>
    <string name="logout">Log out</string>
    <string name="change_phone_number">Change Phone Number</string>
    <string name="change_email_address">Change Email Address</string>
    <string name="pro_account_expires">Your Pro account expires on %1$s</string>
    <string name="includes_free_months">This includes your %2$d bonus months!</string>
    <string name="verified_phone_number">Verified Phone Number:</string>
    <string name="devices_authorized">Devices authorized to use your Pro account</string>
    <string name="send_us_your_logs">Send us your Logs</string>
    <string name="thanks_purchase">Thanks for your purchase of Lantern Pro!</string>
    <string name="start_inviting">\r\nStart inviting!</string>
    <string name="sending_request">Processing request</string>
    <string name="invite_friends">Enter your e-mail to receive a code to share with your friends. Get a free month of PRO when they sign up!</string>
    <string name="invite_friends_welcome">When your friends purchase the two-year plan you will each get 3 months free, the one-year plan gets you each 1 month free</string>
    <string name="invite_friends_btn">Invite Friends</string>
    <string name="share_friends_text">Share with friends to earn free months!</string>
    <string name="email_address">Email Address</string>
    <string name="switch_to_alipay">Switch to Alipay</string>
    <string name="switch_to_credit_card">Switch to Credit Card Payment</string>
    <string name="continue_to_pro">Continue to PRO</string>
    <string name="continue_to_basic">Continue to Basic Version</string>
    <string name="continue_">Continue</string>
    <string name="complete_purchase">Complete Purchase</string>
    <string name="continue_to_payment">Continue to Payment</string>
    <string name="purchase_voucher">Purchase Voucher</string>
    <string name="skip_to_checkout">Skip to Checkout</string>
    <string name="ok">OK</string>
    <string name="authorize_device_pro">Authorize Device for Pro</string>
    <string name="or">OR</string>
    <string name="now_using">You are now using the fastest and most stable Lantern to date.</string>
    <string name="start_using">Start Using Lantern</string>
    <string name="enter_lantern_pro_codes">Enter Lantern Pro Codes</string>
    <string name="yinbi_redemption">Yinbi Redemption</string>
    <string name="renew_pro_get_yinbi">Renew Pro Get Yinbi</string>
    <string name="copy_all_codes">Copy All Codes</string>
    <string name="redeem_codes">REDEEM CODES</string>
    <string name="yinbi_cryptocurrency">Yinbi Cryptocurrency</string>
    <string name="the_yinbi_foundation_description">The Yinbi foundation is giving away 888 billion YNB cryptocurrency exclusively through Lantern to purchasers of Lantern Pro. YNB will be distributed at the end of every day, based on the quantity of Yinbi released that day, the number of people that upgrade/renew, and the number of years or accounts you purchase. After purchase you can find details about collecting your YNB on the Yinbi Redemption screen.</string>
    <string name="authorize_with_device_linking_pin">Authorize with Device Linking Pin</string>
    <string name="requires_physical_access_to_a_lantern_pro_device">Requires physical access to a Lantern Pro Device</string>
    <string name="link_with_pin">LINK WITH PIN</string>
    <string name="authorize_device_via_email">Authorize Device via Email</string>
    <string name="requires_access_to_the_email_you_used_to_buy_lantern_pro">Requires access to the email you used to buy Lantern Pro</string>
    <string name="link_via_email">LINK VIA EMAIL</string>
    <string name="describe_your_issue">Issue Description</string>
    <string name="send_report">Send report</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="visit_yin_bi_to_redeem_your_ynb">Visit Yin.bi to redeem your YNB, and check your account balance. Yinbi Redemption Codes expire 30 days after purchase.</string>
    <string name="ynb"># YNB</string>
</resources>