<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:gravity="center"
    android:paddingTop="22dp"
    android:paddingBottom="22dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:background="@color/accent_white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/wall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="22dp"
        android:paddingBottom="16dp"
        android:scaleType="fitXY"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:src="@drawable/wall" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcome_to_lantern"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="22dp"
        android:textAppearance="@style/MediumText"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/welcome_to_lantern" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/now_using"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="18dp"
        android:textSize="13sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/now_using" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/unlimited_data"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:textSize="13sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/to_get_unlimited" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startUsingBtn"
        android:layout_height="40dp"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/start_using"
        android:textAppearance="@style/MediumText"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="14sp"
        android:textAllCaps="true"
        android:textColor="@color/accent_white"
        android:clickable="true"
        android:background="@color/pink" />
</LinearLayout>
