<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <fragment
        xmlns:lantern="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        lantern:layout_constraintStart_toStartOf="parent"
        lantern:layout_constraintEnd_toEndOf="parent"
        lantern:layout_constraintTop_toTopOf="parent"
        class="org.getlantern.lantern.fragment.TitleBar"
        lantern:titleText="@string/authorize_device_pro"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:text="@string/authorize_with_device_linking_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPin"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/tvPinSubtitle"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:text="@string/requires_physical_access_to_a_lantern_pro_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPinSubtitle"
        android:textAppearance="?attr/textAppearanceCaption"
        android:layout_marginTop="@dimen/space_between_text_large"
        app:layout_constraintTop_toBottomOf="@+id/tvPin"
        app:layout_constraintBottom_toTopOf="@+id/linkThisDevice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:text="@string/link_with_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linkThisDevice"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tvPinSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:text="@string/authorize_device_via_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvEmail"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/tvEmailSubtitle"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:text="@string/requires_access_to_the_email_you_used_to_buy_lantern_pro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvEmailSubtitle"
        android:textAppearance="?attr/textAppearanceCaption"
        android:layout_marginTop="@dimen/space_between_text_large"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        app:layout_constraintBottom_toTopOf="@+id/linkEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:text="@string/link_via_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/linkEmail"
        android:layout_marginTop="32dp"
        style="?attr/materialButtonOutlinedStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmailSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:text="@string/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvOr"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline"/>

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/divider"
        android:id="@+id/divider1"
        android:background="@color/divider"
        android:layout_marginStart="@dimen/space_large"
        android:layout_marginEnd="@dimen/space_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvOr"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline"/>

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/divider"
        android:id="@+id/divider2"
        android:background="@color/divider"
        android:layout_marginStart="@dimen/space_large"
        android:layout_marginEnd="@dimen/space_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvOr"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline"/>
</androidx.constraintlayout.widget.ConstraintLayout>