<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            xmlns:lantern="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            lantern:layout_constraintStart_toStartOf="parent"
            lantern:layout_constraintEnd_toEndOf="parent"
            lantern:layout_constraintTop_toTopOf="parent"
            class="org.getlantern.lantern.fragment.TitleBar"
            lantern:titleText="@string/yinbi_redemption"/>

        <TextView
            android:text="@string/redeem_codes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_marginTop="24dp"
            android:textAppearance="?attr/textAppearanceOverline"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"/>

        <TextView
            android:text="@string/ynb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:textAppearance="?attr/textAppearanceOverline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            android:layout_marginEnd="24dp"/>

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider"
            android:background="@color/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="@dimen/space_small"
            android:layout_marginHorizontal="@dimen/space_normal"/>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/space_tiny"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            app:layout_constraintBottom_toTopOf="@+id/copyAllCodes">

            <TableLayout
                android:id="@+id/redemptionTable"
                android:stretchColumns="*"
                android:weightSum="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/copyAllCodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_all_codes"
            android:layout_marginBottom="60dp"
            android:visibility="gone"
            style="?attr/borderlessButtonStyle"
            android:textColor="?android:attr/textColorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/visitYinbi"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/visitYinbi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/visit_yin_bi_to_redeem_your_ynb"
            android:layout_marginHorizontal="@dimen/space_large"
            android:layout_marginBottom="@dimen/space_large"
            android:textAppearance="?attr/textAppearanceBody2"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider"
            android:layout_marginBottom="@dimen/space_large"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:background="@color/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/renewPro"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/renewPro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/renew_pro_get_yinbi"
            android:layout_marginBottom="@dimen/space_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/enterProCodes"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/enterProCodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_lantern_pro_codes"
            android:layout_marginBottom="@dimen/space_normal"
            style="?attr/borderlessButtonStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
