<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <fragment
        xmlns:lantern="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        lantern:layout_constraintStart_toStartOf="parent"
        lantern:layout_constraintEnd_toEndOf="parent"
        lantern:layout_constraintTop_toTopOf="parent"
        class="org.getlantern.lantern.fragment.TitleBar"
        lantern:titleText="@string/report_an_issue"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_optional"
        style="@style/Widget.MyApp.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_marginStart="@dimen/space_large"
        android:layout_marginEnd="@dimen/space_large"
        android:layout_marginTop="@dimen/space_large"
        app:startIconDrawable="@drawable/email_icon"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/issueLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/select_issue"
        style="@style/Widget.MyApp.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:layout_constraintStart_toStartOf="@+id/emailLayout"
        app:layout_constraintEnd_toEndOf="@+id/emailLayout"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout"
        android:layout_marginTop="@dimen/space_above_normal"
        app:startIconDrawable="@drawable/ic_alert_icon">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/issue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionContainer"
        android:layout_width="0dp"
        android:layout_height="144dp"
        android:hint="@string/describe_your_issue"
        style="@style/Widget.MyApp.TextInputLayout.OutlinedBox"
        android:layout_marginTop="@dimen/space_above_normal"
        app:layout_constraintStart_toStartOf="@+id/emailLayout"
        app:layout_constraintEnd_toEndOf="@+id/emailLayout"
        app:layout_constraintTop_toBottomOf="@+id/issueLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_report"
        android:enabled="false"
        android:backgroundTint="@color/bg_color_selector"
        android:layout_marginBottom="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>