<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_yinbi_small"
        android:id="@+id/imageView5"
        android:layout_marginTop="@dimen/space_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:text="@string/yinbi_cryptocurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        android:textAppearance="?attr/textAppearanceBody1"
        android:layout_marginTop="@dimen/space_small"/>

    <com.google.android.material.textview.MaterialTextView
        android:text="@string/the_yinbi_foundation_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/space_large"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:minWidth="60dp"
        android:visibility="gone"
        style="@style/Widget.MyApp.Button.TextButton.Normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:layout_marginTop="@dimen/space_small"
        android:layout_marginEnd="@dimen/space_small"
        />
</androidx.constraintlayout.widget.ConstraintLayout>